
Changed the detex.c target in the Makefile to use a temporary file
because I experienced problems (segmentation fault) with lex on
Solaris 2.1 when input was from stdin.


Modified (Version 2.7) -- September 10, 1997
Removed line breaks in detex.l between a few patterns and actions.  It
appears that flex is no longer able to handle this.  Thanks to Anthony
Harris <harris@hebb.neurology.pitt.edu> and Marty Leisner
<leisner@sdsp.mc.xerox.com> for reporting this.


Porting notes -- March 30, 1992
When using gcc, or compiling on a NeXT, you should compile with
-fwritable-strings.  With the change to SetInputPaths() in 2.6 this
should no longer be necessary.

On a NeXT, it has been reported that lex replaces the '\0' with NULL,
and then the compiler complains about it.  I think this is an old bug
that is no longer applicable.

July 30, 1993
The flex scanner generator does not work because it does not handle
input buffering the same way as lex.  I don't know of any reasonable
way to rewrite detex to get around this problem.

May 25, 1995
According to alain@ia1.u-strasbg.fr (Alain Ketterlin), using flex
allows 8-bit characters to be handled correctly.

Modified (Version 2.8) -- January 1, 2008
Added NCSA/University of Illinois Open Source License to facilitate
free redistribution.

(Version 2.8.1) -- October 2, 2008
First version of OpenDetex.
Making program compile on modern UNIX systems; many fixes in LaTeX
code handling (quotes, figure and table environments, headings and
many more).

(Version 2.8.2 - UNRELEASED) -- February, 2016
Improved ANSI C compatibility. Used kpse_find_file() and
kpse_program_name(). Handle `\kern', allow `em/ex'for dimensions,
handle glue specs. Added the never-interactive option to prevent flex
from creating a problematic prototype for isatty(). Renamed
ERROR -> my_ERROR to avoid a conflict with WIN32 headers. Used binary
mode for output file (Peter Breitenlohner and Werner Lemberg)

Insert a space in place of right curly brace (Eric Miotto).